Closed Bug 343417 Opened 20 years ago Closed 20 years ago

chatzilla leaks its chrome

Categories

(Core :: XPConnect, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.8.1beta2

People

(Reporter: ajschult784, Assigned: mrbkap)

References

Details

(Keywords: fixed1.8.1, memory-leak, regression)

Attachments

(2 files)

Using dbaron's leak logging (http://dbaron.org/log/2006-01#e20060110a), just starting chatzilla (seamonkey -chat) and closing it leaks most of the chrome: Leaked 6 out of 6 DOM Windows Leaked 18 out of 22 documents Leaked 0 out of 3 docshells Backing out bug 339041 fixes the leaks. I'll attach the full leak output.
Attached file processed leak log
Keywords: mlk
Attached patch Proposed fixSplinter Review
This patch seems to help by clearing the cached class objects when JS_ClearScope is called on the global object (which we do for windows). It also adds code that prints out the cached class objects' names when GC_MARK_DEBUG is enabled (instead of printing **UNKNOWN SLOT n**.
Attachment #228477 - Flags: review?(brendan)
Attachment #228477 - Flags: review?(brendan) → review+
Potential fix checked into trunk.
Status: NEW → RESOLVED
Closed: 20 years ago
OS: Linux → All
Priority: -- → P2
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8.1beta2
We'll want this for a leak fix followup to the js1.7 landing, for the 1.8 branch (for beta 1, safe enough), if tinderbox confirms it. /be
Flags: blocking1.8.1?
Flags: blocking1.8.1? → blocking1.8.1+
Depends on: 343966
There's a problem with a comment box on a page, it does not reload and does not show the comment after posting. Maybe bug 343966 will fix this and if not I'll file a bug for it.
No longer depends on: 344052
bc, mrbkap: the substantive bug here was fixed with the js1.7 landing on the 1.8 branch, right? For some reason the GC_MARK_DEBUG stuff didn't land on the 1.8 branch. I merged it into the landing for bug 343455. /be
Keywords: fixed1.8.1
(In reply to comment #6) > bc, mrbkap: the substantive bug here was fixed with the js1.7 landing on the > 1.8 branch, right? I don't think this made JS1.7. It should land (along with bug 343966) on that branch.
Comment on attachment 228477 [details] [diff] [review] Proposed fix Ok, please land the jsapi.c change when approved. I did the jsgc.c landing already, as noted. Any other bugfix patches needed for this fix to "stick"? /be
Attachment #228477 - Flags: approval1.8.1?
Comment on attachment 228477 [details] [diff] [review] Proposed fix a=drivers. Please land on the MOZILLA_1_8_BRANCH along with attachment 228762 [details] [diff] [review].
Attachment #228477 - Flags: approval1.8.1? → approval1.8.1+
removing fixed1.8.1; please only use that keyword when the patch has landed on the branch -- we use it in our queries to filter out bugs that are blocking but have been fixed (so if you've used it elsewhere, please remove it?)
Keywords: fixed1.8.1
Sorry! I don't know why I set fixed1.8.1, atm. Optimized, then forgot to clear it, or something. /be
Fix checked into the 1.8 branch.
Keywords: fixed1.8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: