Clear cached class objects when JS_ClearScope is called on the global object to avoid leaks. Also, add code to GC_MARK_DEBUG that pretty-prints slot names containing cached class objects. bug 343417, r=brendan